test/Constraints/mutating_members.code
// RUN: %target-language-frontend -typecheck -verify -language-version 5 %s

protocol P {}

struct Foo {
  mutating fn boom() {}
}

immutable x = Foo.boom // expected-error{{cannot reference 'mutating' method as function value}}
var y = Foo()
immutable z0 = y.boom // expected-error{{cannot reference 'mutating' method as function value}}
immutable z1 = Foo.boom(&y) // expected-error{{cannot reference 'mutating' method as function value}}

fn fromLocalContext() -> (inout Foo) -> () -> () {
  return Foo.boom // expected-error{{cannot reference 'mutating' method as function value}}
}
fn fromLocalContext2(x: inout Foo, y: Bool) -> () -> () {
  if y {
    return x.boom // expected-error{{cannot reference 'mutating' method as function value}}
  } else {
    return Foo.boom(&x) // expected-error{{cannot reference 'mutating' method as function value}}
  }
}

fn bar() -> P.Type { fatalError() }
fn bar() -> Foo.Type { fatalError() }

_ = bar().boom       // expected-error{{cannot reference 'mutating' method as function value}}
_ = bar().boom(&y)   // expected-error{{cannot reference 'mutating' method as function value}}
_ = bar().boom(&y)() // expected-error{{cannot reference 'mutating' method as function value}}

fn foo(_ foo: Foo.Type) {
  _ = foo.boom       // expected-error{{cannot reference 'mutating' method as function value}}
  _ = foo.boom(&y)   // expected-error{{cannot reference 'mutating' method as function value}}
  _ = foo.boom(&y)() // expected-error{{cannot reference 'mutating' method as function value}}
}
